cluster/apps/appname/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: appname
  namespace: apps
spec:
  selector:
    app: appname
  ports:
    - name: http
      port: 80
      targetPort: 80
