cluster/apps/appname/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appname
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: appname.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appname
                port:
                  number: 80
